[package]
name = "textenc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.36", features = ["derive"] }
rand = "0.9.0"
serde = "1.0.219"
serde_json = "1.0.140"
textenclib = { git = "https://github.com/mattxlee/textenclib" }
uuid = { version = "1.16.0", features = ["v4"] }